Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/8161985/T8161985a.out
T8161985a.java:14:17: compiler.err.override.meth: (compiler.misc.cant.override: getClass(), T8161985, getClass(), java.lang.Object), final
1 error
